                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 19-06-2006 changed: Apologies to translators, i added a new string to 'English/strings.xml' - i have made the relevant changes and the strings are now located in LocalizeStrings as they should be.
 - 19-06-2006 added: Skin.SetNumeric() built in function.
 - 19-06-2006 fixed: linksys wrtsl54gs folder listings would only list root of shares after samba update (dfs flag set in list request caused server to mad)
 - 18-06-2006 fixed: Username/pass could be shown in the name section after browsing for a new media source via Add/Edit source dialog.
 - 18-06-2006 fixed: Rotate and Zoom animations center coords were not scaled correctly
 - 18-06-2006 fixed: httpapi SendKey no longer requires the web server to be running
 - 17-06-2006 added: Master lock check on settings subcategories (does not affect settings window).
 - 17-06-2006 changed: Re-enabled settings item on context menus.
 - 17-06-2006 changed: Return to current window on bad passcode entry.
 - 16-06-2006 fixed: <previouswindow> tag wasn't initialized (meant you were stuck in Settings after changing from Mc360 -> PM3)
 - 16-06-2006 fixed: Spincontrols could show ?0? when the value was out of range - defaults back to the first value now.
 - 16-06-2006 fixed: Changed the default colour to use for HW overlays to 010101 (fixes transparency issues with OSDs)
 - 15-06-2006 fixed: trouble with startup lock.
 - 14-06-2006 added: Dialog().browse  to Python. Lets the user navigate with the FileManager.
 - 14-06-2006 fixed: GetThumb in Album and Movie information screens allows browsing to find thumb.